--- a/src/App.css
+++ b/src/App.css
@@ -217,11 +217,12 @@ body {
   font-family: "Poppins", sans-serif;
   color: #ff7e6b;
   line-height: 1.5;
+  text-align: center;
 }
 
 .typing-demo-medium-1 {
   position: relative;
-  width: 30ch;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   font-family: monospace;
@@ -247,7 +248,7 @@ body {
     border-right: 3px solid;
   }
   100% {
-    width: 32.5ch;
+    width: 100%;
     border-right: 3px solid;
   }
 }
@@ -261,7 +262,7 @@ body {
 
 .typing-demo-mobile-1 {
   position: relative;
-  width: 14ch;
+  width: 100%;
   white-space: nowrap;
   overflow: hidden;
   font-family: monospace;
@@ -309,7 +310,7 @@ body {
     border-right: 3px solid;
   }
   100% {
-    width: 12ch;
+    width: 100%;
     border-right: 3px solid;
   }
 }
@@ -320,7 +321,7 @@ body {
     border-right: 3px solid;
   }
   100% {
-    width: 17ch;
+    width: 100%;
     border-right: 3px solid;
   }
 }
@@ -331,13 +332,13 @@ body {
     border-right: 3px solid;
   }
   100% {
-    width: 19.5ch;
+    width: 100%;
     border-right: 3px solid;
   }
 }
 
 .typing-demo-big {
-  width: 63ch;
+  width: fit-content;
   animation: typing 4s steps(55), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
@@ -349,6 +350,9 @@ body {
 @keyframes typing {
   from {
     width: 0;
+  }
+  to {
+    width: 100%;
   }
 }
 
@@ -474,7 +478,7 @@ body {
 */
 
 .skills-cont {
-  padding: 2rem 0;
+  padding: 3rem 0;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
@@ -489,7 +493,8 @@ body {
   display: grid;
   place-items: center;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 7rem;
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 6.5rem;
   grid-row-gap: 2.5rem;
   max-width: 890px;
   width: 80%;
@@ -512,8 +517,6 @@ body {
   }
   .skills {
     grid-column-gap: 4%;
-    grid-row-gap: 2%;
-    margin-bottom: 1rem;
     margin-top: 2rem;
   }
   .skills-header {
@@ -524,14 +527,14 @@ body {
 @media (max-width: 700px) {
   .skills {
     grid-template-columns: repeat(3, 1fr);
-    margin-bottom: 3rem;
+    grid-template-rows: repeat(4, 1fr);
   }
 }
 
 @media (max-width: 450px) {
   .skills {
     grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 6rem;
+    grid-template-rows: repeat(6, 1fr);
   }
 }
 
@@ -541,7 +544,7 @@ body {
   }
   .skills {
     grid-template-columns: repeat(1, 1fr);
-    margin-bottom: 36rem;
+    grid-template-rows: repeat(12, 1fr);
   }
 }
 
