--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -64,6 +64,10 @@
   -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
 }
 
+.material-symbols-outlined[content="menu"] {
+  color: #ff7e6b;
+}
+
 @media (max-width: 510px) {
   .navAnchor {
     width: 100%;
