Fix issues with font not displaying correctly on some devices

--- a/src/App.css
+++ b/src/App.css
@@ -502,7 +502,7 @@ body {
 
 .skills-header,
 .contact-title {
-  font-family: "poppins";
+  font-family: "Poppins", sans-serif;
   color: #ff7e6b;
   font-size: 2rem;
 }
